Refatoracao do adminBundle. Removendo Bundle e organizando em namespace

--- a/templates/admin/default/login.html.twig
+++ b/templates/admin/default/login.html.twig
@@ -1,4 +1,4 @@
-{% extends '@Admin/base_login_admin.html.twig' %}
+{% extends 'base_login_admin.html.twig' %}
 
 {% block title %}Autenticação{% endblock %}
 
