--- a/templates/admin/default/login.html.twig
+++ b/templates/admin/default/login.html.twig
@@ -3,18 +3,25 @@
 {% block title %}Autenticação{% endblock %}
 
 {% block body_login_admin %}
+    {% if error %}
+        <div class="alert alert-danger">
+            {{ error.messageKey|trans(error.messageData, 'security') }}
+        </div>
+    {% endif %}
     <div class="animate form login_form">
         <section class="login_content">
-            <form>
+            <br />
+            <br />
+            <form  method="post" action="{{ path('admin_default_login') }}">
                 <h1>Área Administrativa</h1>
                 <div>
-                    <input type="email" class="form-control" placeholder="email@dominio.com.br" required />
+                    <input type="email" name="_username" class="form-control" placeholder="email@dominio.com.br" required />
                 </div>
                 <div>
-                    <input type="password" class="form-control" placeholder="Sua senha de acesso..." required />
+                    <input type="password" name="_password" class="form-control" placeholder="Sua senha de acesso..." required />
                 </div>
                 <div>
-                    <a class="btn btn-default submit" href="index.html">Log in</a>
+                    <button class="btn btn-default submit" type="submit">Log in</button>
                     <a class="reset_pass" href="#">Lost your password?</a>
                 </div>
 
