--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -35,7 +35,7 @@
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
-                            <h2>John Doe</h2>
+                            <h2>{{ app.user.nome }}</h2>
                         </div>
                         <div class="clearfix"></div>
                     </div>
@@ -177,14 +177,14 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="{{ asset('/gentelella/images/img.jpg') }}" alt="">John Doe
+                                    <img src="{{ asset('/gentelella/images/img.jpg') }}" alt="">{{ app.user.nome }}
                                     <span class=" fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
                                     <li><a href="javascript:;"> Perfil</a></li>
                                     <li><a href="javascript:;"> Configurações</a></li>
                                     <li>
-                                        <a href="login.html"><i class="fa fa-sign-out pull-right"></i> Sair</a>
+                                        <a href="{{ path('logout') }}"><i class="fa fa-sign-out pull-right"></i> Sair</a>
                                     </li>
                                 </ul>
                             </li>
