--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -12,6 +12,7 @@
     <link href="{{ asset('/gentelella/vendors/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
     <link href="{{ asset('/gentelella/vendors/nprogress/nprogress.css') }}" rel="stylesheet">
     <link href="{{ asset('/gentelella/build/css/custom.min.css') }}" rel="stylesheet">
+    <link href="{{ asset('/css/styles.css') }}" rel="stylesheet">
     {% block stylesheets %}{% endblock %}
 </head>
 
