--- a/templates/base_login_admin.html.twig
+++ b/templates/base_login_admin.html.twig
@@ -13,6 +13,7 @@
     <link href="{{ asset('/gentelella/vendors/nprogress/nprogress.css') }}" rel="stylesheet">
     <link href="{{ asset('/gentelella/vendors/animate.css/animate.min.css') }}" rel="stylesheet">
     <link href="{{ asset('/gentelella/build/css/custom.min.css') }}" rel="stylesheet">
+    <link href="{{ asset('/css/styles.css') }}" rel="stylesheet">
     {% block stylesheets %}{% endblock %}
 
 </head>
