--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -183,7 +183,7 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
                                     <li><a href="javascript:;"> Perfil</a></li>
-                                    <li><a href="javascript:;"> Configurações</a></li>
+                                    <li><a href="{{ path('admin_settings') }}"> Configurações</a></li>
                                     <li>
                                         <a href="{{ path('logout') }}"><i class="fa fa-sign-out pull-right"></i> Sair</a>
                                     </li>
