Correção  de atributos

--- a/templates/admin/default/login.html.twig
+++ b/templates/admin/default/login.html.twig
@@ -18,7 +18,7 @@
                     <input type="email" name="email" class="form-control input-lg" placeholder="email@dominio.com.br" required />
                 </div>
                 <div>
-                    <input type="password" name="senha" class="form-control input-lg" placeholder="Sua senha de acesso..." required />
+                    <input type="password" name="password" class="form-control input-lg" placeholder="Sua senha de acesso..." required />
                 </div>
 
                 <div class="text-left">
