--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -36,7 +36,7 @@
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
-                            <h2>{{ app.user.nome }}</h2>
+                            <h2>{{ app.user.name }}</h2>
                         </div>
                         <div class="clearfix"></div>
                     </div>
@@ -178,7 +178,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="{{ asset('/gentelella/images/img.jpg') }}" alt="">{{ app.user.nome }}
+                                    <img src="{{ asset('/gentelella/images/img.jpg') }}" alt="">{{ app.user.name }}
                                     <span class=" fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
