saving partners in database

--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -57,7 +57,7 @@
                                     <li><a href="index3.html">Dashboard3</a></li>
                                 </ul>
                             </li>
-                            <li><a href="{{ path('admin_partner_list') }}"><i class="fa fa-home"></i> Parceiros </a>
+                            <li><a href="{{ path('admin_partner_list') }}"><i class="fa fa-star"></i> Parceiros </a>
                             </li>
                             <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
