alteracao do menu principal do sistema e geracao do esqueleto do crud de videos

--- a/templates/admin/default/login.html.twig
+++ b/templates/admin/default/login.html.twig
@@ -15,7 +15,7 @@
             <form  method="post" action="{{ path('auth_default_login') }}">
                 <h1>Área Administrativa</h1>
                 <div>
-                    <input type="email" name="email" class="form-control input-lg" placeholder="email@dominio.com.br" required />
+                    <input type="email" autofocus name="email" class="form-control input-lg" placeholder="email@dominio.com.br" required />
                 </div>
                 <div>
                     <input type="password" name="password" class="form-control input-lg" placeholder="Sua senha de acesso..." required />
