--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -50,7 +50,7 @@
                             <h3>Site/CMS</h3>
                             <ul class="nav side-menu">
                                 <li>
-                                    <a><i class="fa fa-youtube"></i> Vídeos</a>
+                                    <a href="{{ path('admin_videos_index') }}"><i class="fa fa-youtube"></i> Vídeos</a>
                                 </li>
                             </ul>
                         </div>
