--- a/templates/admin/videos/_delete_form.html.twig
+++ b/templates/admin/videos/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('video_delete', {'id': video.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('admin_videos_delete', {'id': video.id}) }}" onsubmit="return confirm('Deseja realmente deletar este registro?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ video.id) }}">
     <button class="btn">Delete</button>
