--- a/templates/admin/videos/index.html.twig
+++ b/templates/admin/videos/index.html.twig
@@ -3,15 +3,18 @@
 {% block title %}RapaduraTV{% endblock %}
 
 {% block body_admin %}
-    <a href="{{ path('admin_videos_new') }}">Create new</a>
 
-    <table class="table">
+    <a class="btn btn-primary" href="{{ path('admin_videos_new') }}">
+        <i class="fa fa-plus-circle"></i> Adicionar
+    </a>
+
+    <table class="table table-striped table-bordered jambo_table bulk_action">
         <thead>
-            <tr>
-                <th style="width: 140px" class="text-center">Criado em</th>
+            <tr class="headings">
+                <th style="width: 160px" class="text-center">Criado em</th>
                 <th>Título</th>
                 <th style="width: 100px" class="text-center">Status</th>
-                <th style="width: 100px" class="text-center">Ações</th>
+                <th style="width: 180px" class="text-center">Ações</th>
             </tr>
         </thead>
         <tbody>
@@ -21,8 +24,14 @@
                 <td>{{ video.title }}</td>
                 <td class="text-center">{{ video.status ? 'Ativo' : 'Inativo' }}</td>
                 <td class="text-center">
-                    <a href="{{ path('admin_videos_show', {'id': video.id}) }}">show</a>
-                    <a href="{{ path('admin_videos_edit', {'id': video.id}) }}">edit</a>
+                    <div class="btn-group" role="group" aria-label="...">
+                        <a class="btn btn-default btn-sm" href="{{ path('admin_videos_show', {'id': video.id}) }}">
+                            <i class="fa fa-eye"></i> Ver
+                        </a>
+                        <a class="btn btn-warning btn-sm" href="{{ path('admin_videos_edit', {'id': video.id}) }}">
+                            <i class="fa fa-edit"></i> Editar
+                        </a>
+                    </div>
                 </td>
             </tr>
         {% else %}
@@ -32,4 +41,24 @@
         {% endfor %}
         </tbody>
     </table>
+
+    <nav class="text-center" aria-label="Page navigation">
+        <ul class="pagination">
+            <li>
+                <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li>
+                <a href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 {% endblock %}
