crud of partners

--- a/templates/admin/partner/edit.html.twig
+++ b/templates/admin/partner/edit.html.twig
@@ -1,12 +1,14 @@
 {% extends 'base_admin.html.twig' %}
 
-{% block title %}Novo Parceiro{% endblock %}
+{% block title %}Editar Parceiro{% endblock %}
 
 {% block body_admin %}
+
     {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn">{{ button_label|default('Update') }}</button>
     {{ form_end(form) }}
 
     <a href="{{ path('admin_partner_list') }}" class="btn btn-primary">back to list</a>
+
 {% endblock %}
