--- a/templates/admin/partner/index.html.twig
+++ b/templates/admin/partner/index.html.twig
@@ -11,12 +11,15 @@
                     <div><a href="{{ path('admin_partner_create') }}" class="btn btn-success">Cadastrar</a></div>
                 </div>
                 <div class="x_content">
-                    <table id="datatable-buttons" class="table table-striped table-bordered">
+                    <table class="table table-striped table-bordered">
                         <thead>
                         <tr>
                             <th>Nome</th>
                             <th>Slug</th>
                             <th>Tipo</th>
+                            <th>Status</th>
+                            <th>Criado em</th>
+                            <th></th>
                         </tr>
                         </thead>
                         <tbody>
@@ -25,6 +28,24 @@
                                 <td>{{ partner.name }}</td>
                                 <td>{{ partner.slug }}</td>
                                 <td>{{ partner.type }}</td>
+                                <td>{{ partner.status ? 'Habilitado' : 'Desabilitado' }}</td>
+                                <td>{{ partner.createdAt ? partner.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                                <td>
+                                    <div class="col-md-2">
+                                        <a href="{{ path('admin_partner_edit', {'id': partner.id}) }}" class="btn btn-sm btn-default">
+                                            <i class="fa fa-edit"></i>
+                                        </a>
+                                    </div>
+                                    <div class="center-margin col-md-2">
+                                        <form method="post" action="{{ path('admin_partner_delete', {'id': partner.id}) }}" onsubmit="return confirm('Tem certeza que deseja excluir este item?');">
+                                            <input type="hidden" name="_method" value="DELETE">
+                                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ partner.id) }}">
+                                            <button class="btn btn-sm btn-danger"><i class="fa fa-remove"></i></button>
+                                        </form>
+                                    </div>
+
+
+                                </td>
                             </tr>
                         {% endfor %}
                         </tbody>
