--- a/templates/admin/videos/_form.html.twig
+++ b/templates/admin/videos/_form.html.twig
@@ -1,4 +1,60 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+{{ form_start(form, {"attr": {"novalidate": "novalidate"}}) }}
+{{ form_row(form._token) }}
+
+<div class="col-md-6">
+    <div class="row">
+        <div class="col-md-12 form-group">
+            {{ form_label(form.title) }}
+            {{ form_widget(form.title, {"attr": {"class": "form-control"}}) }}
+            {{ form_errors(form.title) }}
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12 form-group">
+            {{ form_label(form.description) }}
+            {{ form_widget(form.description, {"attr": {"class": "form-control", "style":"height: 120px;"}}) }}
+            {{ form_errors(form.description) }}
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12 form-group">
+            {{ form_widget(form.status) }}
+            {{ form_label(form.status) }}
+        </div>
+    </div>
+</div>
+
+<div class="col-md-6">
+    <div class="row">
+        <div class="col-md-12 form-group">
+            {{ form_label(form.incorporation_code) }}
+            {{ form_widget(form.incorporation_code, {"attr": {"class": "form-control", "style":"height: 189px;"}}) }}
+        </div>
+    </div>
+    {% if video.id %}
+        <div class="row">
+            <div class="col-md-12 form-group">
+                <h3>Pré-visualização do Vídeo</h3>
+                {{ video.incorporationCode|raw }}
+            </div>
+        </div>
+    {% endif %}
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="ln_solid"></div>
+
+        <button class="btn btn-primary">
+            <i class="fa fa-save"></i> {{ button_label|default('Salvar') }}
+        </button>
+
+        {% if video.id %}
+            <a href="{{ path('admin_videos_new') }}" class="btn btn-default">
+                <i class="fa fa-plus-circle"></i> Novo Registro
+            </a>
+        {% endif %}
+    </div>
+</div>
