--- a/templates/admin/videos/index.html.twig
+++ b/templates/admin/videos/index.html.twig
@@ -3,62 +3,72 @@
 {% block title %}RapaduraTV{% endblock %}
 
 {% block body_admin %}
+    <div class="x_panel">
+        <div class="x_title">
+            <a class="btn btn-primary" href="{{ path('admin_videos_new') }}">
+                <i class="fa fa-plus-circle"></i> Adicionar
+            </a>
+            <div class="clearfix"></div>
+        </div>
+        <div class="x_content">
+            <table class="table table-striped table-bordered jambo_table bulk_action">
+                <thead>
+                <tr class="headings">
+                    <th style="width: 160px" class="text-center">Criado em</th>
+                    <th>Título</th>
+                    <th style="width: 100px" class="text-center">Status</th>
+                    <th style="width: 210px" class="text-center">Ações</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for video in videos %}
+                    <tr>
+                        <td class="text-center">{{ video.createdAt ? video.createdAt|date('d/m/Y H:i') : '' }}</td>
+                        <td>
+                            <a style="display: block" href="{{ path('admin_videos_show', {"id": video.id}) }}">
+                                {{ video.title }}
+                            </a>
+                        </td>
+                        <td class="text-center">{{ video.status ? 'Ativo' : 'Inativo' }}</td>
+                        <td class="text-center">
+                            <div class="btn-group" role="group" aria-label="...">
+                                <a class="btn btn-default btn-sm" href="{{ path('admin_videos_show', {'id': video.id}) }}">
+                                    <i class="fa fa-eye"></i> Ver
+                                </a>
+                                <a class="btn btn-warning btn-sm" href="{{ path('admin_videos_edit', {'id': video.id}) }}">
+                                    <i class="fa fa-edit"></i> Editar
+                                </a>
+                                {{ include('admin/videos/_delete_form.html.twig', {"gridButton": true}) }}
+                            </div>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="10">Nenhum registro encontrado.</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
 
-    <a class="btn btn-primary" href="{{ path('admin_videos_new') }}">
-        <i class="fa fa-plus-circle"></i> Adicionar
-    </a>
-
-    <table class="table table-striped table-bordered jambo_table bulk_action">
-        <thead>
-            <tr class="headings">
-                <th style="width: 160px" class="text-center">Criado em</th>
-                <th>Título</th>
-                <th style="width: 100px" class="text-center">Status</th>
-                <th style="width: 180px" class="text-center">Ações</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for video in videos %}
-            <tr>
-                <td class="text-center">{{ video.createdAt ? video.createdAt|date('d/m/Y H:i') : '' }}</td>
-                <td>{{ video.title }}</td>
-                <td class="text-center">{{ video.status ? 'Ativo' : 'Inativo' }}</td>
-                <td class="text-center">
-                    <div class="btn-group" role="group" aria-label="...">
-                        <a class="btn btn-default btn-sm" href="{{ path('admin_videos_show', {'id': video.id}) }}">
-                            <i class="fa fa-eye"></i> Ver
+            <nav class="text-center" aria-label="Page navigation">
+                <ul class="pagination">
+                    <li>
+                        <a href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
                         </a>
-                        <a class="btn btn-warning btn-sm" href="{{ path('admin_videos_edit', {'id': video.id}) }}">
-                            <i class="fa fa-edit"></i> Editar
+                    </li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li>
+                        <a href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
                         </a>
-                    </div>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="10">Nenhum registro encontrado.</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <nav class="text-center" aria-label="Page navigation">
-        <ul class="pagination">
-            <li>
-                <a href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li>
-                <a href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 {% endblock %}
