--- a/templates/admin/videos/show.html.twig
+++ b/templates/admin/videos/show.html.twig
@@ -1,54 +1,62 @@
 {% extends 'base_admin.html.twig' %}
 
-{% block title %}Video{% endblock %}
+{% block title %}Detalhes do Video{% endblock %}
 
 {% block body_admin %}
-    <h1>Video</h1>
+    <div class="x_panel">
+        <div class="x_title">
+            <div class="nav navbar-right">
+                <a class="btn btn-link" href="{{ path('admin_videos_index') }}">
+                    <i class="fa fa-arrow-circle-left"></i> Voltar para Listagem
+                </a>
+                <a class="btn btn-link" href="{{ path('admin_videos_edit', {"id": video.id}) }}">
+                    <i class="fa fa-edit"></i> Editar
+                </a>
+                {{ include('admin/videos/_delete_form.html.twig') }}
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <div class="x_content">
+            <h2>{{ video.title }}</h2>
+            <table class="table">
+                <tbody>
+                <tr>
+                    <th>ID</th>
+                    <td>{{ video.id }}</td>
+                </tr>
+                <tr>
+                    <th>Slug</th>
+                    <td>{{ video.slug }}</td>
+                </tr>
+                <tr>
+                    <th>Descrição</th>
+                    <td>{{ video.description }}</td>
+                </tr>
+                <tr>
+                    <th>Código de Incorporação</th>
+                    <td>{{ video.incorporationCode }}</td>
+                </tr>
+                <tr>
+                    <th>Registro Ativo ?</th>
+                    <td>{{ video.status ? 'Sim' : 'Não' }}</td>
+                </tr>
+                <tr>
+                    <th>Criando Por</th>
+                    <td>{{ video.createdBy.name }}</td>
+                </tr>
+                <tr>
+                    <th>Criando Em</th>
+                    <td>{{ video.createdAt ? video.createdAt|date('d/m/Y H:i:s') : '' }}</td>
+                </tr>
+                <tr>
+                    <th>Última Atualização em</th>
+                    <td>{{ video.updatedAt ? video.updatedAt|date('d/m/Y H:i:s') : '' }}</td>
+                </tr>
+                </tbody>
+            </table>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ video.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ video.title }}</td>
-            </tr>
-            <tr>
-                <th>Slug</th>
-                <td>{{ video.slug }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ video.description }}</td>
-            </tr>
-            <tr>
-                <th>Incorporation_code</th>
-                <td>{{ video.incorporationCode }}</td>
-            </tr>
-            <tr>
-                <th>Status</th>
-                <td>{{ video.status ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>Created_at</th>
-                <td>{{ video.createdAt ? video.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Updated_at</th>
-                <td>{{ video.updatedAt ? video.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Deleted_at</th>
-                <td>{{ video.deletedAt ? video.deletedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('admin_videos_index') }}">back to list</a>
-
-    <a href="{{ path('admin_videos_edit', {'id': video.id}) }}">edit</a>
-
-    {{ include('admin/videos/_delete_form.html.twig') }}
+            <h2>Pré-visualização</h2>
+            {{ video.incorporationCode|raw }}
+        </div>
+    </div>
 {% endblock %}
