--- a/templates/admin/partner/edit.html.twig
+++ b/templates/admin/partner/edit.html.twig
@@ -3,12 +3,18 @@
 {% block title %}Editar Parceiro{% endblock %}
 
 {% block body_admin %}
-
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Update') }}</button>
-    {{ form_end(form) }}
-
-    <a href="{{ path('admin_partner_list') }}" class="btn btn-primary">back to list</a>
-
+    <div class="x_panel">
+        <div class="x_title">
+            <div class="nav navbar-right">
+                <a class="btn btn-link" href="{{ path('admin_partner_list') }}">
+                    <i class="fa fa-arrow-circle-left"></i> Voltar para Listagem
+                </a>
+                {{ include('admin/partner/_delete_form.html.twig') }}
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <div class="x_content">
+            {{ include('admin/partner/_form.html.twig', {'button_label': 'Atualizar'}) }}
+        </div>
+    </div>
 {% endblock %}
