--- a/templates/admin/partner/index.html.twig
+++ b/templates/admin/partner/index.html.twig
@@ -3,55 +3,75 @@
 {% block title %}Parceiros{% endblock %}
 
 {% block body_admin %}
-    <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-            <div class="x_panel">
-                <div class="x_title">
-                    <div class="clearfix"></div>
-                    <div><a href="{{ path('admin_partner_create') }}" class="btn btn-success">Cadastrar</a></div>
-                </div>
-                <div class="x_content">
-                    <table class="table table-striped table-bordered">
-                        <thead>
-                        <tr>
-                            <th>Nome</th>
-                            <th>Slug</th>
-                            <th>Tipo</th>
-                            <th>Status</th>
-                            <th>Criado em</th>
-                            <th></th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for partner in partners %}
-                            <tr>
-                                <td>{{ partner.name }}</td>
-                                <td>{{ partner.slug }}</td>
-                                <td>{{ partner.type }}</td>
-                                <td>{{ partner.status ? 'Habilitado' : 'Desabilitado' }}</td>
-                                <td>{{ partner.createdAt ? partner.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                                <td>
-                                    <div class="col-md-2">
-                                        <a href="{{ path('admin_partner_edit', {'id': partner.id}) }}" class="btn btn-sm btn-default">
-                                            <i class="fa fa-edit"></i>
-                                        </a>
-                                    </div>
-                                    <div class="center-margin col-md-2">
-                                        <form method="post" action="{{ path('admin_partner_delete', {'id': partner.id}) }}" onsubmit="return confirm('Tem certeza que deseja excluir este item?');">
-                                            <input type="hidden" name="_method" value="DELETE">
-                                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ partner.id) }}">
-                                            <button class="btn btn-sm btn-danger"><i class="fa fa-remove"></i></button>
-                                        </form>
-                                    </div>
 
-
-                                </td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+    <div class="x_panel">
+        <div class="x_title">
+            <a class="btn btn-primary" href="{{ path('admin_partner_create') }}">
+                <i class="fa fa-plus-circle"></i> Adicionar
+            </a>
         </div>
+
+        <div class="x_content">
+        <table class="table table-striped table-bordered jambo_table bulk_action">
+            <thead>
+            <tr class="headings">
+                <th style="width: 160px" class="text-center">Criado em</th>
+                <th>Nome</th>
+                <th>Slug</th>
+                <th>Tipo</th>
+                <th style="width: 100px" class="text-center">Status</th>
+                <th style="width: 180px" class="text-center">Ações</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for partner in partners %}
+                <tr>
+                    <td class="text-center">{{ partner.createdAt ? partner.createdAt|date('d/m/Y H:i') : '' }}</td>
+                    <td>{{ partner.name }}</td>
+                    <td>{{ partner.slug }}</td>
+                    <td>{{ partner.type }}</td>
+                    <td class="text-center">{{ partner.status ? 'Ativo' : 'Inativo' }}</td>
+                    <td class="text-center">
+                        <div class="btn-group" role="group" aria-label="...">
+                            <a class="btn btn-default btn-sm" title="Ver"
+                               href="{{ path('admin_partner_show', {'id': partner.id}) }}">
+                                <i class="fa fa-eye"></i> Ver
+                            </a>
+                            <a class="btn btn-warning btn-sm" title="Editar"
+                               href="{{ path('admin_partner_edit', {'id': partner.id}) }}">
+                                <i class="fa fa-edit"></i> Editar
+                            </a>
+                            {{ include('admin/partner/_delete_form.html.twig', {"gridButton": true}) }}
+                        </div>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="10">Nenhum registro encontrado.</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        </div>
+
+        <nav class="text-center" aria-label="Page navigation">
+            <ul class="pagination">
+                <li>
+                    <a href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li>
+                    <a href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
 {% endblock %}
