--- a/templates/admin/videos/index.html.twig
+++ b/templates/admin/videos/index.html.twig
@@ -11,6 +11,22 @@
             <div class="clearfix"></div>
         </div>
         <div class="x_content">
+            <div>
+                {{ form_start(form, {"method": "get", "attr": {"novalidate": "novalidate"}}) }}
+                <div class="col-md-4 form-group">
+                    {{ form_label(form.title) }}
+                    {{ form_widget(form.title, {"attr": {"class": "form-control"}}) }}
+                    {{ form_errors(form.title) }}
+                </div>
+                <div class="col-md-2 form-group" style="margin-top: 26px">
+                    {{ form_widget(form.btn_consultar, {"attr": {"class": "btn btn-default"}}) }}
+                    {#<button type="submit" class="btn btn-primary">#}
+                        {#<i class="fa fa-search"></i> Consultar#}
+                    {#</button>#}
+                </div>
+            </div>
+
+            <hr>
             <table class="table table-striped table-bordered jambo_table bulk_action">
                 <thead>
                 <tr class="headings">
@@ -21,21 +37,21 @@
                 </tr>
                 </thead>
                 <tbody>
-                {% for video in videos %}
+                {% for row in rows %}
                     <tr>
-                        <td class="text-center">{{ video.createdAt ? video.createdAt|date('d/m/Y H:i') : '' }}</td>
+                        <td class="text-center">{{ row.createdAt ? row.createdAt|date('d/m/Y H:i') : '' }}</td>
                         <td>
-                            <a style="display: block" href="{{ path('admin_videos_show', {"id": video.id}) }}">
-                                {{ video.title }}
+                            <a style="display: block" href="{{ path('admin_videos_show', {"id": row.id}) }}">
+                                {{ row.title }}
                             </a>
                         </td>
-                        <td class="text-center">{{ video.status ? 'Ativo' : 'Inativo' }}</td>
+                        <td class="text-center">{{ row.status ? 'Ativo' : 'Inativo' }}</td>
                         <td class="text-center">
                             <div class="btn-group" role="group" aria-label="...">
-                                <a class="btn btn-default btn-sm" href="{{ path('admin_videos_show', {'id': video.id}) }}">
+                                <a class="btn btn-default btn-sm" href="{{ path('admin_videos_show', {'id': row.id}) }}">
                                     <i class="fa fa-eye"></i> Ver
                                 </a>
-                                <a class="btn btn-warning btn-sm" href="{{ path('admin_videos_edit', {'id': video.id}) }}">
+                                <a class="btn btn-warning btn-sm" href="{{ path('admin_videos_edit', {'id': row.id}) }}">
                                     <i class="fa fa-edit"></i> Editar
                                 </a>
                                 {{ include('admin/videos/_delete_form.html.twig', {"gridButton": true}) }}
@@ -50,25 +66,9 @@
                 </tbody>
             </table>
 
-            <nav class="text-center" aria-label="Page navigation">
-                <ul class="pagination">
-                    <li>
-                        <a href="#" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                    </li>
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
-                    <li>
-                        <a href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+            <div class="pagerfanta text-center">
+                {{ pagerfanta(pager, 'twitter_bootstrap3') }}
+            </div>
         </div>
     </div>
 {% endblock %}
