--- a/templates/admin/partner/_form.html.twig
+++ b/templates/admin/partner/_form.html.twig
@@ -24,6 +24,14 @@
             {{ form_widget(form.type) }}
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-12 form-group">
+            {{ form_label(form.image) }}
+            {{ form_widget(form.image, {"attr": {"class": "form-control"}}) }}
+            {{ form_errors(form.image) }}
+        </div>
+    </div>
 </div>
 
 <div class="row">
