--- a/templates/admin/videos/_form.html.twig
+++ b/templates/admin/videos/_form.html.twig
@@ -1,9 +1,10 @@
+{% form_theme form with 'bootstrap_3_layout.html.twig' %}
 {{ form_start(form, {"attr": {"novalidate": "novalidate"}}) }}
 {{ form_row(form._token) }}
 
 <div class="col-md-6">
     <div class="row">
-        <div class="col-md-12 form-group">
+        <div class="col-md-12 form-group {{ form.title.vars.errors.count() > 0 ? 'has-error' : '' }}">
             {{ form_label(form.title) }}
             {{ form_widget(form.title, {"attr": {"class": "form-control"}}) }}
             {{ form_errors(form.title) }}
@@ -11,7 +12,7 @@
     </div>
 
     <div class="row">
-        <div class="col-md-12 form-group">
+        <div class="col-md-12 form-group {{ form.description.vars.errors.count() > 0 ? 'has-error' : '' }}">
             {{ form_label(form.description) }}
             {{ form_widget(form.description, {"attr": {"class": "form-control", "style":"height: 120px;"}}) }}
             {{ form_errors(form.description) }}
@@ -28,9 +29,10 @@
 
 <div class="col-md-6">
     <div class="row">
-        <div class="col-md-12 form-group">
+        <div class="col-md-12 form-group {{ form.incorporation_code.vars.errors.count() > 0 ? 'has-error' : '' }}">
             {{ form_label(form.incorporation_code) }}
             {{ form_widget(form.incorporation_code, {"attr": {"class": "form-control", "style":"height: 189px;"}}) }}
+            {{ form_errors(form.incorporation_code) }}
         </div>
     </div>
     {% if video.id %}
